Prevent text overflow

--- a/src/components/ReposOverview/ReposOverview.css
+++ b/src/components/ReposOverview/ReposOverview.css
@@ -47,6 +47,7 @@
 /* A single repo */
 
 .c-repos-entry {
+  --background: #fff;
   min-height: 112px;
   margin-top: 24px;
   padding: 24px 32px;
@@ -55,7 +56,7 @@
   flex-flow: column;
   gap: 16px;
 
-  background: #fff;
+  background: var(--background);
   border-radius: 6px;
   word-break: break-word;
 }
@@ -70,8 +71,29 @@
 }
 
 .c-repos-entry__description {
+  --lh: 19px;
+  --max-lines: 1;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
   font-size: 16px;
-  line-height: 19px;
+  line-height: var(--lh);
+}
+
+.c-repos-entry__description::before {
+  content: '...';
+  position: absolute;
+  bottom: 0;
+  right: 8px;
+}
+
+.c-repos-entry__description::after {
+  content: '';
+  position: absolute;
+  right: 8px;
+  width: 1rem;
+  height: 1rem;
+  background: var(--background);
 }
 
 @media (max-width: 500px) {
